# alivemcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  GITHUB_SETUP.md  MAX4LIVE_INTEGRATION.md  Makefile  README.md  TESTING.md  ableton_client.py  config-response.json  install.py  mcp_server.py  mcp_server_tool_defs.py  pyproject.toml
.githooks/: pre-commit  pre-push
ALiveMCP_Remote/: __init__.py  liveapi_tools.py
ClaudeMCP_Remote/: __init__.py  constants.py  socket_server.py
docs/: AGENT_INDEX.json  API_REFERENCE.md  ARCHITECTURE.md  IMPACT_MAP_RUNTIME_DISPATCH.md  IMPACT_MAP_TOOL_SURFACE.md  INSTALLATION.md  tool_manifest.json
examples/: cv_tools_control.py  test_all_tools.py
installer/: _dev_deps.py  _git_hooks.py  _mcp.py  _remote_script.py  _ui.py
maint/: README.md  verify_docs_tools.py
mcp_tool_defs/: full.json  index.json  part_000.json  part_001.json
planning/: FULL-DOCS.html  FULL-DOCS.md  agent-parseability-and-human-readability-plan.instructions.md  cleanup.instructions.md  lom-docs-plan.instructions.md  wiki-as-source-of-truth.instructions.md  wiki.instructions.md
scripts/: __init__.py  docstring_checker.py  docstring_lib.py  docstring_report.json  fix_docstring_indentation.py  fix_missing_see_also.py  generate_api_reference.py  generate_docstring_report.py  generate_from_wiki.py  generate_tool_defs.py  generate_tool_defs_chunked.py  generate_tool_manifest.py  generate_validation_report.py  generate_wiki_index.py  migrate_wiki_frontmatter.py  migration_candidates.json  migration_candidates_session.json  run_validations.py  (+4 more)
(+426 files in other folders)
