[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alivemcp"
version = "2.0.0"
description = "MCP server that exposes 220 Ableton Live control tools via Model Context Protocol"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
alivemcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server", "mcp_server_tool_defs"]

[tool.ruff]
target-version = "py37"
line-length = 100
# Max file length: 300 lines (enforced by scripts/check_file_length.py pre-commit hook)

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["F401"]  # unused imports OK in examples
"ALiveMCP_Remote/**" = ["F821"]  # Live module is injected by Ableton at runtime

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=ALiveMCP_Remote --cov-report=term-missing"
